--- a/SMART_REST/SMART_REST/SMART_REST.csproj
+++ b/SMART_REST/SMART_REST/SMART_REST.csproj
@@ -108,19 +108,19 @@
       <DependentUpon>ADD_EDIT_DISH.cs</DependentUpon>
     </Compile>
     <Compile Include="content_orders.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="employee.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="list_of_dishes.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="list_of_table.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="menu.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="MessageForm.cs">
       <SubType>Form</SubType>
@@ -129,13 +129,13 @@
       <DependentUpon>MessageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="orders.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="ORDER_EDIT.cs">
+    <Compile Include="ORDER_SELECT.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ORDER_EDIT.Designer.cs">
-      <DependentUpon>ORDER_EDIT.cs</DependentUpon>
+    <Compile Include="ORDER_SELECT.Designer.cs">
+      <DependentUpon>ORDER_SELECT.cs</DependentUpon>
     </Compile>
     <Compile Include="ADD_EDIT_EMPLOYEE.cs">
       <SubType>Form</SubType>
@@ -150,7 +150,7 @@
       <DependentUpon>INPUT.cs</DependentUpon>
     </Compile>
     <Compile Include="positions.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -183,23 +183,23 @@
     <Compile Include="ADD_EDIT_STOCK.Designer.cs">
       <DependentUpon>ADD_EDIT_STOCK.cs</DependentUpon>
     </Compile>
-    <Compile Include="SRModel.Context.cs">
+    <Compile Include="SrModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SRModel.Context.tt</DependentUpon>
+      <DependentUpon>SrModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="SRModel.cs">
+    <Compile Include="SrModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="SRModel.Designer.cs">
+    <Compile Include="SrModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SRModel.edmx</DependentUpon>
+      <DependentUpon>SrModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="stocks.cs">
-      <DependentUpon>SRModel.tt</DependentUpon>
+      <DependentUpon>SrModel.tt</DependentUpon>
     </Compile>
     <EmbeddedResource Include="CHEQUE.resx">
       <DependentUpon>CHEQUE.cs</DependentUpon>
@@ -210,8 +210,8 @@
     <EmbeddedResource Include="MessageForm.resx">
       <DependentUpon>MessageForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ORDER_EDIT.resx">
-      <DependentUpon>ORDER_EDIT.cs</DependentUpon>
+    <EmbeddedResource Include="ORDER_SELECT.resx">
+      <DependentUpon>ORDER_SELECT.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ADD_EDIT_EMPLOYEE.resx">
       <DependentUpon>ADD_EDIT_EMPLOYEE.cs</DependentUpon>
@@ -246,12 +246,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EntityDeploy Include="SRModel.edmx">
+    <EntityDeploy Include="SrModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SRModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>SrModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="SRModel.edmx.diagram">
-      <DependentUpon>SRModel.edmx</DependentUpon>
+    <None Include="SrModel.edmx.diagram">
+      <DependentUpon>SrModel.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -269,15 +269,15 @@
     <None Include="Resources\iconUser1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SRModel.Context.tt">
+    <Content Include="SrModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SRModel.edmx</DependentUpon>
-      <LastGenOutput>SRModel.Context.cs</LastGenOutput>
+      <DependentUpon>SrModel.edmx</DependentUpon>
+      <LastGenOutput>SrModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="SRModel.tt">
+    <Content Include="SrModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SRModel.edmx</DependentUpon>
-      <LastGenOutput>SRModel.cs</LastGenOutput>
+      <DependentUpon>SrModel.edmx</DependentUpon>
+      <LastGenOutput>SrModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
